--- a/thesis/bitr/intro.tex
+++ b/thesis/bitr/intro.tex
@@ -1,5 +1,5 @@
 First, we examine the problem of binary type recovery without Holmes.
-We designe this system prior to Holmes, but gave the inspiration for most of its features, as we discuss along the way.
+We designed this system prior to Holmes, but gave the inspiration for most of its features, as we discuss along the way.
 
 \section{Introduction}
 \begin{savenotes}
