--- a/thesis/bitr/related.tex
+++ b/thesis/bitr/related.tex
@@ -1,7 +1,7 @@
 %Related Work
 \section{Related Work}
 \label{sec:related}
-%  Starting blurb similar to backround blurb, surprised by this...
+%  Starting blurb similar to background blurb, surprised by this...
 As this work stands at the confluence of compilation, instruction set architectures, static analysis, and type theory, there is a great deal of prior work that provided the foundation to create \bitr. There have been other attempts to perform binary type recovery. Type theorists have explored the relevant formal systems that enable us to appropriately describe the constraints imposed by the wide variety of instructions. Others have tried to build decompilers, each of which contains at least an attempt at type reconstruction.
 %  Chunk related work into blobs and describe, reference to sections
 \subsection{Types in Compiled Code}
